; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Neo/extr_NDIS5.c_NeoNdisOnOpen.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Neo/extr_NDIS5.c_NeoNdisOnOpen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32*, i32 }

@MAX_SIZE = common dso_local global i32 0, align 4
@ctx = common dso_local global %struct.TYPE_2__* null, align 8
@FALSE = common dso_local global i64 0, align 8
@TRUE = common dso_local global i64 0, align 8
@NDIS_NEO_EVENT_NAME = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @NeoNdisOnOpen(i32* %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i32, i32* @MAX_SIZE, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %6, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %7, align 8
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctx, align 8
  %14 = icmp eq %struct.TYPE_2__* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i64, i64* @FALSE, align 8
  store i64 %16, i64* %3, align 8
  store i32 1, i32* %8, align 4
  br label %50

17:                                               ; preds = %2
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctx, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @FALSE, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %17
  %24 = load i64, i64* @FALSE, align 8
  store i64 %24, i64* %3, align 8
  store i32 1, i32* %8, align 4
  br label %50

25:                                               ; preds = %17
  %26 = load i64, i64* @TRUE, align 8
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctx, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i64 %26, i64* %28, align 8
  %29 = load i8*, i8** @NDIS_NEO_EVENT_NAME, align 8
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctx, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @sprintf(i8* %12, i8* %29, i32 %32)
  %34 = call i32* @NeoNewEvent(i8* %12)
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctx, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 1
  store i32* %34, i32** %36, align 8
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctx, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 1
  %39 = load i32*, i32** %38, align 8
  %40 = icmp eq i32* %39, null
  br i1 %40, label %41, label %46

41:                                               ; preds = %25
  %42 = load i64, i64* @FALSE, align 8
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ctx, align 8
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  store i64 %42, i64* %44, align 8
  %45 = load i64, i64* @FALSE, align 8
  store i64 %45, i64* %3, align 8
  store i32 1, i32* %8, align 4
  br label %50

46:                                               ; preds = %25
  %47 = load i64, i64* @TRUE, align 8
  %48 = call i32 @NeoSetConnectState(i64 %47)
  %49 = load i64, i64* @TRUE, align 8
  store i64 %49, i64* %3, align 8
  store i32 1, i32* %8, align 4
  br label %50

50:                                               ; preds = %46, %41, %23, %15
  %51 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %51)
  %52 = load i64, i64* %3, align 8
  ret i64 %52
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #2

declare dso_local i32* @NeoNewEvent(i8*) #2

declare dso_local i32 @NeoSetConnectState(i64) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
